chore(claude): public-facing CLAUDE.md, remove internal paths and local refs
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>